# Salamander-Software

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  fast_infer.py  infer.py  main.py  make_dataset.py  pipeline_pose_then_seg.py  pyproject.toml  rotate_and_crop.py  run.bat  segmentation_crop.py  visualize.py  visualize_labels.py  yolo_utils.py  zoom_augmentations.py
data-scaled/: data.yaml
old-data/: data.yaml
